# whispr-batch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh  transcribe_audio.py  transcribe_gui.py
audio_transcribe_core/: __init__.py  core.py  types.py
